<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="br.uniararas.posgrad.androidmvp.view.impl.LoginActivity">

    <TextView
        android:id="@+id/main_lbl_primeiro"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/main_lbl_titulo"
        android:textColor="@color/vermelha"
        android:textSize="26sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/main_lbl_username"
        android:text="@string/lbl_login_usuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_lbl_primeiro"
        />

    <EditText
        android:id="@+id/main_txt_usuario"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/main_lbl_username" />


    <TextView
        android:id="@+id/main_lbl_senha"
        android:text="@string/lbl_login_senha"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_txt_usuario" />

    <EditText
        android:id="@+id/main_txt_senha"
        android:layout_width="fill_parent"
        android:inputType="textPassword"
        android:layout_height="60dp"
        android:layout_below="@+id/main_lbl_senha" />

    <Button
        android:id="@+id/main_btn_login"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/main_txt_senha"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/btn_login_entrar" />

    <Button
        android:id="@+id/main_btn_limpar"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/main_btn_login"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:text="@string/btn_login_limpar" />

</RelativeLayout>
